--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
-  "title": "Translated title",
-  "description": {
-    "part1": "First translated bit",
-    "part2": "Second nested translated bit"
+  "home": {
+    "title": "AIdventure",
+    "subtitle": "How it works",
+    "description": "choose your own adventure",
+    "btn-new": "Start new adventure!"
   }
 }
