--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -20,6 +20,8 @@
   },
   "adventure": {
     "title": "Adéntrate en la aventura...",
+    "start": "Ha ocurrido un problema iniciando tu aventura, inténtalo de nuevo.",
+    "btn-start": "Iniciar la aventura!",
     "narrating": "Narrando...",
     "concluded": "La aventura ha terminado.",
     "link-home": "Vuelta al inicio!"
